# TwitterClone

./: README.md  appspec.yml  biome.json  biome.toml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: biome.yml  cd.yml  integration_test.yml  pytest.yml  ruff.yml  (+1 more)
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: db.py  main.py  migrate_db.py  migrate_test_db.py
backend/api/auth/: register.py  user.py
backend/api/controller/reply/: reply.py
backend/api/models/: auth.py  models.py
backend/api/posts/: posts.py
backend/api/repository/auth/: user.py
backend/api/repository/follow/: follow.py
backend/api/repository/like/: like.py
backend/api/repository/posts/: posts.py
backend/api/repository/profile/: profile.py
backend/api/repository/reply/: reply.py
backend/api/repository/user/: user.py
backend/api/routers/: auth.py  comment.py  follow.py  like.py  posts.py  profile.py  reply.py  user.py
backend/api/schemes/: auth.py  comment.py  follow.py  likes.py  posts.py  profile.py  reply.py
backend/api/services/posts/: posts.py
backend/api/services/reply/: comment.py  reply.py
backend/test/: conftest.py  test_auth.py  test_follow.py  test_main.py
backend/test/integration_test/: conftest.py  test_auth_api.py  test_follow_api.py  test_like_api.py  test_post_api.py  test_reply_api.py  test_user_api.py
backend/test/unit_test/: conftest.py  test_auth.py  test_follow.py  test_like.py  test_post.py  test_profile.py
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: install_dependencies.sh  start_server.sh
(+41 files in other folders)
